--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "core-js": "^3.16.4",
     "css-loader": "^6.2.0",
     "html-entities": "^2.3.2",
-    "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.1",
     "thread-loader": "^3.0.4",
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
