replace node-sass with dart sass

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "core-js": "^3.16.4",
     "css-loader": "^6.5.0",
     "html-entities": "^2.3.2",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass": "^1.44.0",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "thread-loader": "^3.0.4",
